[tool.poetry]
name = "dvd2m4v"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dvd2m4v = "dvd2m4v:main"